# ranger-demo-python

./: .gitignore  README.md  pyproject.toml  ranger-plan.md
.github/workflows/: ranger.yml
.ranger/skills/: org-style.md  python-fastapi.md
app/: auth.py  main.py
app/notes/: router.py  schemas.py  service.py
tests/: test_auth.py  test_health.py
tests/notes/: test_auth.py  test_notes.py
